[package]
name = "benfred-read-process-memory"
version = "0.2.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Read memory from another process."
homepage = "https://github.com/benfred/read-process-memory"
repository = "https://github.com/benfred/read-process-memory"

[dependencies]
libc = "0.2"
log = "0.4"

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.3.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"

[dev-dependencies]
docmatic = "0.1"
